added post to api-docs
